--- a/templates/index.html
+++ b/templates/index.html
@@ -1,11 +1,31 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="jp">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>成績管理ツール</title>
+        <link rel="stylesheet" type="text/css" href="../static/Style.css">
 </head>
 <body>
-    <h1>a</h1>
+    <h1>成績管理ツール</h1>
+
+    <div class="homebtn">
+        <a href="★" class="btn_02">試験実施回</a>&emsp;
+        <a href="★" class="btn_02">生徒情報</a>
+    </div>
+    <br>
+    <br>
+
+    <div class="homelist">
+        <ul class="cp_list">
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+          </ul>
+
+    </div>
+
+    
 </body>
 </html>
