--- a/templates/index.html
+++ b/templates/index.html
@@ -4,27 +4,39 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>成績管理ツール</title>
-        <link rel="stylesheet" type="text/css" href="../static/Style.css">
+        <link rel="stylesheet" type="text/css" href="./Style.css">
 </head>
 <body>
-    <h1>成績管理ツール</h1>
+    <header>
+    <div class="title">成績管理ツール</div>
+    </header>
 
-    <div class="homebtn">
-        <a href="★" class="btn_02">試験実施回</a>&emsp;
-        <a href="★" class="btn_02">生徒情報</a>
+    <div class="menu_btn">
+        <a href="★" class="btn_01">試験実施回</a>
+        <a href="★" class="btn_01">生徒情報</a>
     </div>
-    <br>
-    <br>
 
-    <div class="homelist">
+    <br>
+    <br>
+    
+
         <ul class="cp_list">
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-          </ul>
+            <li>あいうえお 
+                <div class="listbtn_01">
+                <button type=“button” onclick="location.href='★'">成績閲覧</button>
+                <button type=“button” onclick="location.href='★'">成績編集</button>  
+                </div>  
+            </li>           
 
-    </div>
+            
+            <li>かきくけこ</li>
+            <li>さしすせそ</li>
+            <li>たちつてと</li>
+        </ul>
+
+    
+    
+    
 
     
 </body>
