cssリンク名を変更しました

--- a/templates/select_score.html
+++ b/templates/select_score.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/成績編集.css">
+    <link rel="stylesheet" href="/select_score.css">
     <title>成績の編集</title>
 </head> 
 <body>
@@ -12,7 +12,7 @@
         <h2>今までの成績</h2>
         <button class="new-addition" onclick="location.href='URL'">新規追加</button>
         <form action="your-server-side-script.php" method="POST">
-        
+    
             <div class="form-row"> 
                 <div class="form-label"> 
                     <label for="test1">2024年　第1回　テスト</label> 
