--- a/templates/select_score.css
+++ b/templates/select_score.css
@@ -44,3 +44,10 @@ button {
 button:hover { 
     background-color: #145a91; 
 }
+
+h2 { 
+    border-bottom: 2px solid #000; 
+    /* アンダーラインを設定 */ 
+    padding-bottom: 10px; 
+    /* アンダーラインとテキストの間に余白を追加 */ 
+}
