--- a/templates/select_score.html
+++ b/templates/select_score.html
@@ -9,8 +9,11 @@
 <body>
     <div style="text-align: center;">
         <h1>成績の編集</h1>
-        <h2>今までの成績</h2>
+        
         <button class="new-addition" onclick="location.href='URL'">新規追加</button>
+        <br>
+        <h2>今までの成績</h2>
+        <div class="line"></div>
         <form action="your-server-side-script.php" method="POST">
     
             <div class="form-row"> 
