--- a/templates/test_number_edit .html
+++ b/templates/test_number_edit .html
@@ -8,15 +8,17 @@
 </head>
 <body>
     <div style="text-align: center;">
-     <h1>テストの実施回の編集</h1>
-     <input type="text" name="name" id="name">
-     <button onclick="location.href='URL'">追加</button>
-     <br>
-     <input type="text" name="name" id="name">
-     <button onclick="location.href='URL'">編集</button>
-     <button onclick="location.href='URL'">削除</button>
+        <h1>テストの実施回の編集</h1>
+        <div class="form-row"></div>
+            <input type="text" name="name" id="name">
+            <button class="add-btn" onclick="location.href='URL'">追加</button>
+        </div>
+        <div class="form-row">
+            <input type="text" name="name2" id="name2">
+            <button class="edit-btn" onclick="location.href='URL'">編集</button>
+            <button class="delete-btn" onclick="location.href='URL'">削除</button>
+        </div>
     </div>
 </body>
-
 </html>
 
