--- a/static/test_number_edit .css
+++ b/static/test_number_edit .css
@@ -11,9 +11,23 @@
     justify-content: center; 
     margin-bottom: 10px;
 } 
+
+.form-label { 
+    flex: 0 0 auto; 
+    text-align: center;
+}
+
+label { 
+    text-align: center;
+    display: block;
+} 
+
+input[type="text"] { 
+    text-align: left;
+}
  
-button { 
-    margin-left: 10px; 
+button {
+    margin-left: 50px; 
     padding: 5px 10px; 
     border: none; 
     background-color: #166ab5; 
@@ -22,8 +36,25 @@ button {
     cursor: pointer; 
 } 
 
+.new-addition { 
+    align-items: center; 
+    background-color: #166ab5; 
+    color: #fff; 
+    border-radius: 3px; 
+    cursor: pointer; 
+} 
+
+.line {
+    margin: auto;
+    margin-bottom: 30px;
+    width: 40%;
+    border-bottom: solid 2px #000;
+}
+
+
 button:hover { 
-    background-color: #145a91; 
+    background-color: #145a91;
+    transform: scale(1.1); 
 }
  
 div { 
