--- a/templates/select_score.html
+++ b/templates/select_score.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="select_score.css">
+    <link rel="stylesheet" href="../static/select_score.css">
     <title>成績の編集</title>
 </head> 
 <body>
