--- a/templates/test_number_edit .html
+++ b/templates/test_number_edit .html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="test_number_edit .css">
+    <link rel="stylesheet" href="../static/test_number_edit .css">
     <title>テストの実施回の編集</title>
 </head>
 <body>
@@ -11,7 +11,7 @@
         <h1>テストの実施回の編集</h1>
         <div class="form-row"></div>
             <input type="text" name="name" id="name">
-            <button class="add-btn" onclick="location.href='URL'">追加</button>
+            <button class="add-btn" onclick="location.href='URL'">新しいテストを追加する</button>
         </div>
         <div class="form-row">
             <input type="text" name="name2" id="name2">
