--- a/static/test_number_edit .css
+++ b/static/test_number_edit .css
@@ -1,48 +1,48 @@
-.center-form { 
-    display: flex; 
-    flex-direction: column; 
-    align-items: center; 
-    justify-content: center; 
-} 
- 
-.form-row { 
-    display: flex; 
-    align-items: center; 
-    justify-content: center; 
+.center-form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.form-row {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     margin-bottom: 10px;
-} 
-
-.form-label { 
-    flex: 0 0 auto; 
-    text-align: center;
 }
 
-label { 
-    text-align: center;
-    display: block;
-} 
-
-input[type="text"] { 
+input[type="text"] {
     text-align: left;
+    margin-right: 10px;
 }
- 
-button {
-    margin-left: 50px; 
-    padding: 5px 10px; 
-    border: none; 
-    background-color: #166ab5; 
-    color: #fff; 
-    border-radius: 3px; 
-    cursor: pointer; 
-} 
 
-.new-addition { 
+.button {
+    padding: 5px 10px;
+    border: none;
+    background-color: #166ab5;
+    color: #fff;
+    border-radius: 3px;
+    cursor: pointer;
+    margin-left: 10px;
+}
+
+.button:hover {
+    background-color: #145a91;
+}
+
+.new-addition, .add-btn { 
     align-items: center; 
     background-color: #166ab5; 
     color: #fff; 
     border-radius: 3px; 
     cursor: pointer; 
 } 
+
+button:hover {
+    background-color: #145a91;
+    transform: scale(1.1);
+}
 
 .line {
     margin: auto;
@@ -51,19 +51,8 @@ button {
     border-bottom: solid 2px #000;
 }
 
-
-button:hover { 
-    background-color: #145a91;
-    transform: scale(1.1); 
-}
- 
-div { 
-    display: flex; 
-    flex-direction: column; 
-    align-items: center; 
-    gap: 10px;
-}
-
-input[type="text"] { 
-    margin-right: 10px;
+.add-btn, .edit-btn, .delete-btn {
+    padding: 0.5rem 1rem;
+    font-size: 1rem;
+    margin-left: 10px;
 }
