--- a/templates/show_score.html
+++ b/templates/show_score.html
@@ -16,47 +16,51 @@
             <h1>
                 成績管理ツール
             </h1>
+            <div class="name_label">
+                <h2>生徒名：</h2>
+                <h2>{{student_name[1]}}</h2>
+            </div>
         </div>
     </header>
 
     <main>
         <div class="avg_score">
-            <canvas id="myChart"></canvas>  <!-- チャート、jsの処理はhtmlのタグ下に記載 -->
+            <canvas id="myChart"></canvas> <!-- チャート、jsの処理はhtmlのタグ下に記載 -->
             <div class="avg_socore_list">
                 <div class="curriculum">
                     <span>HTML:</span>
-                    <span>{{avg_score[2]}}</span>
+                    <span>{{avg_score[1]}}</span>
                 </div>
                 <div class="curriculum">
                     <span>CSS:</span>
-                    <span>{{avg_score[3]}}</span>
+                    <span>{{avg_score[2]}}</span>
                 </div>
                 <div class="curriculum">
                     <span>javascript:</span>
-                    <span>{{avg_score[4]}}</span>
+                    <span>{{avg_score[3]}}</span>
                 </div>
                 <div class="curriculum">
                     <span>Python:</span>
-                    <span>{{avg_score[5]}}</span>
+                    <span>{{avg_score[4]}}</span>
                 </div>
                 <div class="curriculum">
                     <span>Java:</span>
-                    <span>{{avg_score[6]}}</span>
+                    <span>{{avg_score[5]}}</span>
                 </div>
 
             </div>
         </div>
 
         <div class="test_scores">
-            {{% for score in scores %}}
-            <h3>{{テストの名前を入れる}}</h3>
+            {% for score in tests_score %}
+            <h3>{{score[0]}}</h3>
             <div class="score_list">
                 <div class="curriculum">
-                    <span  class="curriculum_item">HTML:</span>
+                    <span class="curriculum_item">HTML:</span>
                     <span>{{score[2]}}</span>
                 </div>
                 <div class="curriculum">
-                    <span  class="curriculum_item">CSS:</span>
+                    <span class="curriculum_item">CSS:</span>
                     <span>{{score[3]}}</span>
                 </div>
                 <div class="curriculum">
@@ -68,11 +72,11 @@
                     <span>{{score[5]}}</span>
                 </div>
                 <div class="curriculum">
-                    <span  class="curriculum_item">Java:</span>
+                    <span class="curriculum_item">Java:</span>
                     <span>{{score[6]}}</span>
                 </div>
             </div>
-            {{% endfor %}}
+            {% endfor %}
         </div>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
@@ -86,6 +90,9 @@
 <script>
 
     var ctx = document.getElementById("myChart");
+    let list = {{ avg_score | tojson }};
+    console.log(list);
+
     var myChart = new Chart(ctx, {
         //グラフの種類
         type: 'radar',
@@ -111,14 +118,14 @@
                 //結合点より外でマウスホバーを認識する範囲（ピクセル単位）
                 hitRadius: 5,
                 //グラフのデータ
-                data: [50, 40, 80, 60, 2]
+                data: [list[1], list[2], list[3], list[4], list[5]]
             }]
         },
         //オプションの設定
         options: {
             // レスポンシブ指定
             responsive: false,
-            maintainAspectRatio: false,
+            maintainAspectRatio: true,
             scale: {
                 ticks: {
                     // 最小値の値を0指定
