--- a/templates/select_score.html
+++ b/templates/select_score.html
@@ -1,46 +1,31 @@
 <!DOCTYPE html>
 <html lang="ja">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../static/select_score.css">
     <title>成績の編集</title>
-</head> 
+</head>
+
 <body>
     <div style="text-align: center;">
         <h1>成績の編集</h1>
-        
-        <button class="new-addition" onclick="location.href='URL'">新規追加</button>
+
+        <button class="new-addition" onclick="location.href='/regist/{{id}}'">新規追加</button>
         <br>
         <h2>今までの成績</h2>
         <div class="line"></div>
         <form action="your-server-side-script.php" method="POST">
-    
-            <div class="form-row"> 
-                <div class="form-label"> 
-                    <label for="test1">2024年　第1回　テスト</label> 
+            {% for test in tests %}
+            <div class="form-row">
+                <div class="form-label">
+                    <label for="test1">2024年　第1回　テスト</label>
                 </div>
-                <button onclick="location.href='URL'">編集</button>
+                <button type="submit">編集</button>
             </div>
-            <div class="form-row"> 
-                <div class="form-label"> 
-                    <label for="test2">2024年　第2回　テスト</label> 
-                </div>
-                <button onclick="location.href='URL'">編集</button>
-            </div>
-            <div class="form-row"> 
-                <div class="form-label"> 
-                    <label for="test3">2024年　第3回　テスト</label> 
-                </div>
-                <button onclick="location.href='URL'">編集</button>
-            </div>
-            <div class="form-row"> 
-                <div class="form-label"> 
-                    <label for="test4">2024年　第4回　テスト</label> 
-                </div>
-                <button onclick="location.href='URL'">編集</button> 
-            </div>
-          
+            {% endfor %}
+
         </form>
     </div>
 </body>
