--- a/templates/student.html
+++ b/templates/student.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>生徒情報</title>
-        <link rel="stylesheet" type="text/css" href="./Style.css">
+        <link rel="stylesheet" type="text/css" href="../static/Style_ozawa.css">
 </head>
 <body>
     <header>
@@ -12,24 +12,22 @@
         </header>
     
         <div class="menu_btn">
-            <a href="★" class="btn_01">新規登録</a>
+            <a href="student_new" class="btn_01">新規登録</a>
         </div>
     
         <br>
         <br>
         
         <ul class="cp_list">
-            <li>あいうえお 
-                <div class="listbtn_02">
-                <button type=“button” onclick="location.href='★'">編集</button>
-                <button type=“button” onclick="location.href='★'">削除</button>  
-                </div>  
-            </li>           
-
-            
-            <li>かきくけこ</li>
-            <li>さしすせそ</li>
-            <li>たちつてと</li>
+            {% for student_lists in student_list %}
+            <li> 
+            {{student_lists[1]}}
+            <div class="listbtn_02">
+            <button type=“button” onclick="location.href='★'">編集</button>
+            <button type=“button” onclick="location.href='★'">削除</button>  
+            </div>  
+            </li>
+            {% endfor %}
         </ul>
         
         <br>
