--- a/templates/index.html
+++ b/templates/index.html
@@ -12,20 +12,20 @@
     </header>
 
     <div class="menu_btn">
-        <a href="★" class="btn_01">試験実施回</a>
-        <a href="★" class="btn_01">生徒情報</a>
+        <a href="./test_number_edit .html" class="btn_01">試験実施回</a>
+        <a href="./student.html" class="btn_01">生徒情報</a>
     </div>
 
     <br>
     <br>
     
     <ul class="cp_list">
-        {% for test in tests %}
+        {% for student_lists in student_list %}
         <li>
-        <option value="{{student[0]}}">{{student[1]}}</option> 
+        {{student_lists[1]}}
         <div class="listbtn_01">
-        <button type=“button” onclick="location.href='★'">成績閲覧</button>
-        <button type=“button” onclick="location.href='★'">成績編集</button>  
+        <button type="button" onclick="location.href='/show/{{student_list[0]}}'">成績閲覧</button>
+        <button type="button" onclick="location.href='★'">成績編集</button>  
         </div>  
         </li>  
         {% endfor %}
