--- a/templates/score_editer.html
+++ b/templates/score_editer.html
@@ -27,8 +27,8 @@
         <div hidden>
 
         </div>
-        <h3>生徒名：{{student_name}}</h3>
-        <form action="/create_score" method="post">
+        <h3>生徒名：{{student_name[1]}}</h3>
+        <form action="/create_score/{{id}}" method="post">
             <input type="hidden" name="student_id" value=1>
             <input type="hidden" name="test_id" value={{select_test[1]}}>  <!-- テスト名 -->
             <div>
