--- a/static/test_number_edit .css
+++ b/static/test_number_edit .css
@@ -1,3 +1,104 @@
+
+.modal {
+    display: none;
+    position: absolute;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.322);
+    justify-content: center;
+    align-items: center;
+}
+
+
+.modal_content {
+    background-color: #f4f4f4;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+    width: 70%;
+    max-width: 600px;
+    margin: 15% auto;
+    animation-name: popup;
+    animation-duration: 1s;
+}
+
+@keyframes popup {
+    from {
+        transform: translateY(10%);
+        opacity: 0;
+    }
+
+    to {
+        opacity: 1;
+    }
+}
+
+.modal_header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-bottom: 1px solid #ddd;
+    padding-bottom: 10px;
+    margin-bottom: 20px;
+}
+
+.modal_body {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-bottom: 1px solid #ddd;
+    padding-bottom: 10px;
+    margin-bottom: 20px;
+}
+
+.modal_header input[type=text] {
+    flex: 0.7;
+    width: 50%;
+    margin: 0px;
+}
+
+.modal_close {
+    color: #aaa;
+    font-size: 28px;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+.modal_close:hover,
+.modal_close:focus {
+    color: black;
+    text-decoration: none;
+}
+
+input[type="text"] {
+    flex: 0.9;
+    font: 20px;
+    width: 100%;
+    padding: 0.5em;
+    color: #333;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
+
+
+.button {
+    padding: 20px 30px;
+    border: none;
+    background-color: #166ab5;
+    color: #fff;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+.button:hover {
+    background-color: #145a91;
+}
+
+
 .center-form {
     display: flex;
     flex-direction: column;
@@ -6,15 +107,23 @@
 }
 
 .form-row {
+    margin: 50px auto;
+    width: 60%;
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
+    padding-bottom: 20px;
+    border-bottom: #aaaaaa solid 1px;
 }
 
 input[type="text"] {
-    text-align: left;
-    margin-right: 10px;
+    font: 15px sans-serif;
+    width: 30%;
+    padding: 0.3em;
+    color: #aaaaaa;
+    border: 1px solid #1b2538;
+    border-radius: 4px;
 }
 
 .button {
@@ -31,28 +140,27 @@ input[type="text"] {
     background-color: #145a91;
 }
 
-.new-addition, .add-btn { 
-    align-items: center; 
-    background-color: #166ab5; 
-    color: #fff; 
-    border-radius: 3px; 
-    cursor: pointer; 
-} 
+.new-addition,
+.add-btn {
+    align-items: center;
+    background-color: #166ab5;
+    color: #fff;
+    border-radius: 3px;
+    cursor: pointer;
+}
 
 button:hover {
     background-color: #145a91;
     transform: scale(1.1);
 }
 
-.line {
-    margin: auto;
-    margin-bottom: 30px;
-    width: 40%;
-    border-bottom: solid 2px #000;
-}
-
-.add-btn, .edit-btn, .delete-btn {
+.add-btn,
+.edit-btn,
+.delete-btn {
+    background-color: #166ab5;
+    color: #f4f4f4;
     padding: 0.5rem 1rem;
     font-size: 1rem;
     margin-left: 10px;
+    border: none;
 }
