修正しました

--- a/templates/score_regist.html
+++ b/templates/score_regist.html
@@ -27,7 +27,7 @@
         <div hidden>
 
         </div>
-        <h3>生徒名：{{student_name}}</h3>
+        <h3>生徒名：{{student_name[1]}}</h3>
         <form action="/create_score/{{id}}" method="post">
             <div>
                 <label for="tests"></label>
