--- a/static/show.css
+++ b/static/show.css
@@ -1,16 +1,36 @@
 body {
+    width: 60%;
+    margin: auto;
+}
+
+main {
     width: 80%;
     margin: auto;
 }
 
 header {
-    margin: 50px 0px;
-    padding: 10px;
-    border: 1px solid #c5c5c5;
+    padding: 1rem 2rem;
+    background-color: rgba(83, 198, 115, 0.3);
+}
+
+.title {
+    font-size: xx-large;
+    color: black;
+    text-decoration: none;
+}
+
+h2 {
+    padding: 1rem 2rem;
+    border-left: 5px solid #000;
+    background: #f4f4f4;
+    width: 60%;
 }
 
 .name_label {
     display: flex;
+    margin: 50px 10px;
+    padding: 1rem 2rem;
+    border-left: 6px double #000;
 }
 
 .name_label h2 {
@@ -19,23 +39,63 @@ header {
 
 .avg_score {
     position: relative;
-    left: -10%;
     display: flex;
     align-items: center;
-    margin-bottom: 100px;
+    margin: 50px 0px;
+    padding-bottom: 100px;
+}
+
+.avg_socore_list {
+    width: 40%;
+    height: 80%;
+    background-color: #c2c2c27c;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+    padding: 10px 40px;
+    margin-left: 30px;
+    animation-name: popup;
+    animation-duration: 1s;
 }
 
 #myChart {
-    width: 100%;
+    flex: 1;
 }
 
 .score_list {
     background-color: #c2c2c27c;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+    padding: 10px 80px;
+    margin-bottom: 50px;
+    animation-name: popup;
+    animation-duration: 1s;
 }
 
-.curriculm {
+@keyframes popup {
+    from {
+        transform: translateX(5%);
+        opacity: 0;
+    }
+
+    to {
+        opacity: 1;
+    }
+}
+
+.curriculum {
     display: flex;
     align-items: center;
+    border-bottom: 1px #0404041f solid;
+    margin: 30px 0px;
+}
+
+.curriculum_item {
+    flex: 0.7;
+    padding-left: 5%;
+}
+
+.curriculum_score {
+    flex: 1;
+    text-align: right;
+    padding-right: 20%;
 }
 
 
