--- a/templates/score_editer.html
+++ b/templates/score_editer.html
@@ -28,7 +28,7 @@
 
         </div>
         <h3>生徒名：{{student_name[1]}}</h3>
-        <form action="/create_score/{{id}}" method="post">
+        <form action="/edit_complete/{{s_id}}/{{t_id}}" method="post">
             <input type="hidden" name="student_id" value=1>
             <input type="hidden" name="test_id" value={{select_test[1]}}>  <!-- テスト名 -->
             <div>
