--- a/templates/student_new.html
+++ b/templates/student_new.html
@@ -10,27 +10,23 @@
     <header>
         <div class="title">生徒情報 新規登録</div>
     </header>
+    <br>
 
     <main>
-        <form action="./student.html" method="post">
-        
+        <form action="/student_new/{{id}}" method="post">
+            <div class="form_box">
+                <label class="form-label edit_font" for="student_id">学籍番号： </label>
+                <input class="form-control label_width" type="number" required value={{select_student[0]}} name="student_id" id="student_id">
+            </div>
+            <div class="form_box">
+                <label class="form-label edit_font" for="student_name">氏名： </label>
+                <input class="form-control label_width" required value={{select_student[1]}} name="name" id="name">
+            </div>
 
-        <div class="">
-            学籍番号：<input type="text">
-            <br>
-            <br>
-            氏名：<input type="text">
-        </div>
-
-        <input type="submit" value="登録">
+            <input type="submit" value="登録完了">
 
         </form>
     </main>
-  
-
-    
-    
-    
     
 </body>
 </html>
