--- a/static/select_score.css
+++ b/static/select_score.css
@@ -10,11 +10,16 @@
     align-items: center; 
     justify-content: center; 
     margin-bottom: 20px;
+    border-bottom: 1px rgba(46, 46, 46, 0.123) solid;
+    width: 40%;
+    margin: 30px auto;
+    padding-bottom: 10px;
 }
 
 .form-label { 
     flex: 0 0 auto; 
     text-align: center;
+    margin-right: 50px;
 }
 
 label { 
@@ -27,10 +32,9 @@ input[type="text"] {
 }
  
 button {
-    margin-left: 50px; 
     padding: 5px 10px; 
     border: none; 
-    background-color: #166ab5; 
+    background-color: #27C654; 
     color: #fff; 
     border-radius: 3px; 
     cursor: pointer; 
@@ -38,14 +42,14 @@ button {
 
 .new-addition { 
     align-items: center; 
-    background-color: #166ab5; 
+    background-color: #27C654; 
     color: #fff; 
     border-radius: 3px; 
     cursor: pointer; 
 } 
 
 button:hover { 
-    background-color: #145a91;
+    background-color: #49d370;
     transform: scale(1.1); 
 }
 
