--- a/static/test_number_edit .css
+++ b/static/test_number_edit .css
@@ -87,7 +87,7 @@ input[type="text"] {
 .button {
     padding: 20px 30px;
     border: none;
-    background-color: #166ab5;
+    background-color: #27C654;
     color: #fff;
     border-radius: 5px;
     cursor: pointer;
@@ -129,7 +129,7 @@ input[type="text"] {
 .button {
     padding: 5px 10px;
     border: none;
-    background-color: #166ab5;
+    background-color: #27C654;
     color: #fff;
     border-radius: 3px;
     cursor: pointer;
@@ -137,27 +137,27 @@ input[type="text"] {
 }
 
 .button:hover {
-    background-color: #145a91;
+    background-color: #45d66e;
 }
 
 .new-addition,
 .add-btn {
     align-items: center;
-    background-color: #166ab5;
+    background-color: #27C654;
     color: #fff;
     border-radius: 3px;
     cursor: pointer;
 }
 
 button:hover {
-    background-color: #145a91;
+    background-color: #45d66e;
     transform: scale(1.1);
 }
 
 .add-btn,
 .edit-btn,
 .delete-btn {
-    background-color: #166ab5;
+    background-color: #27C654;
     color: #f4f4f4;
     padding: 0.5rem 1rem;
     font-size: 1rem;
