--- a/templates/select_score.html
+++ b/templates/select_score.html
@@ -11,7 +11,7 @@
 <body>
     <div style="text-align: center;">
         <h1>成績の編集</h1>
-
+        <h2>生徒名:{{student_name[1]}}</h2><br>
         <button class="new-addition" onclick="location.href='/regist/{{id}}'">新規追加</button>
         <br>
         <h2>今までの成績</h2>
