--- a/templates/test_number_edit.html
+++ b/templates/test_number_edit.html
@@ -5,6 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../static/test_number_edit .css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=M+PLUS+1:wght@100..900&family=Noto+Sans+JP:wght@100..900&family=Zen+Kaku+Gothic+New&display=swap"
+        rel="stylesheet">
     <title>テストの実施回の編集</title>
 </head>
 
@@ -54,7 +59,7 @@
         };
 
         document.addEventListener("click", (e) => {
-            if (e.target == modal){
+            if (e.target == modal) {
                 modal.style.display = "none";
             }
         })
