--- a/templates/select_score.html
+++ b/templates/select_score.html
@@ -5,6 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../static/select_score.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=M+PLUS+1:wght@100..900&family=Noto+Sans+JP:wght@100..900&family=Zen+Kaku+Gothic+New&display=swap"
+        rel="stylesheet">
     <title>成績の編集</title>
 </head>
 
@@ -17,14 +22,14 @@
         <h2>今までの成績</h2>
         <div class="line"></div>
         <!-- <form action="/editer/{{id}}/{{tests[0]}}" method="POST"> -->
-            {% for test in tests %}
-            <div class="form-row">
-                <div class="form-label">
-                    <label for="test1">{{test[1]}}</label>
-                </div>
-                <button type=“button” onclick="location.href='/editer/{{id}}/{{test[0]}}'">編集</button>
+        {% for test in tests %}
+        <div class="form-row">
+            <div class="form-label">
+                <label for="test1">{{test[1]}}</label>
             </div>
-            {% endfor %}
+            <button type=“button” onclick="location.href='/editer/{{id}}/{{test[0]}}'">編集</button>
+        </div>
+        {% endfor %}
 
         <!-- </form> -->
     </div>
