--- a/templates/student.html
+++ b/templates/student.html
@@ -1,42 +1,50 @@
 <!DOCTYPE html>
 <html lang="ja">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>生徒情報</title>
-        <link rel="stylesheet" type="text/css" href="../static/Style_ozawa.css">
+    <link rel="stylesheet" type="text/css" href="../static/Style_ozawa.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=M+PLUS+1:wght@100..900&family=Noto+Sans+JP:wght@100..900&family=Zen+Kaku+Gothic+New&display=swap"
+        rel="stylesheet">
 </head>
+
 <body>
     <header>
         <div class="title">生徒情報</div>
-        </header>
-    
-        <div class="menu_btn">
-            <a href="student_new" class="btn_01">新規登録</a>
-        </div>
-    
-        <br>
-        <br>
-        
-        <ul class="cp_list">
-            {% for student_lists in student_list %}
-            <li> 
+    </header>
+
+    <div class="menu_btn">
+        <a href="student_new" class="btn_01">新規登録</a>
+    </div>
+
+    <br>
+    <br>
+
+    <ul class="cp_list">
+        {% for student_lists in student_list %}
+        <li>
             {{student_lists[1]}}
             <div class="listbtn_02">
-            <button type=“button” onclick="location.href='★'">編集</button>
-            <button type=“button” onclick="location.href='★'">削除</button>  
-            </div>  
-            </li>
-            {% endfor %}
-        </ul>
-        
-        <br>
-        <br>
+                <button type=“button” onclick="location.href='★'">編集</button>
+                <button type=“button” onclick="location.href='★'">削除</button>
+            </div>
+        </li>
+        {% endfor %}
+    </ul>
 
-        
-        <a href="★" class="btn_03">戻る</a>
-        
+    <br>
+    <br>
+
+
+    <a href="★" class="btn_03">戻る</a>
+
 
 
 </body>
+
 </html>
