--- a/templates/student_new.html
+++ b/templates/student_new.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
 <html lang="jp">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>生徒情報 追加登録</title>
-        <link rel="stylesheet" type="text/css" href="../static/Style_ozawa.css">
+    <link rel="stylesheet" type="text/css" href="../static/Style_ozawa.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=M+PLUS+1:wght@100..900&family=Noto+Sans+JP:wght@100..900&family=Zen+Kaku+Gothic+New&display=swap"
+        rel="stylesheet">
 </head>
+
 <body>
     <header>
         <div class="title">生徒情報 追加登録</div>
@@ -21,9 +28,10 @@
             <br>
             <input type="submit" value="登録">
         </form>
-            <br>
+        <br>
     </div>
 
-    
+
 </body>
+
 </html>
